# rox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  file.lox  file.rox  setup_dev.ps1  setup_dev.sh
.github/workflow/: release.yml
.github/workflows/: ci.yml
src/: ast.rs  diagnostics.rs  error.rs  evaluate.rs  main.rs  parser.rs  reader.rs  tokenize.rs  tokenizer.rs
src/ast/: expr.rs  format.rs  helper.rs  mod.rs  operator.rs  stmt.rs
src/ast/tests/: basic_expressions.rs  edge_cases.rs  expression.rs  function_expressions.rs  mod.rs  operator_expressions.rs  statement.rs  test_helper.rs
src/evaluate/: environment.rs  error.rs  interpreter.rs  mod.rs  value.rs
src/evaluate/tests/: base_operation.rs  class.rs  control_flow.rs  error_handling.rs  function_and_scope.rs  functions.rs  helper.rs  mod.rs  oop.rs  variables_scoping.rs
src/parser/: error.rs  mod.rs  parse.rs
src/parser/expression/: binary.rs  mod.rs  primary.rs  unary.rs
src/parser/statement/: compound.rs  control.rs  declaration.rs  exception.rs  mod.rs
src/parser/tests/: basic_tests.rs  call_tests.rs  error_handling.rs  error_tests.rs  func_call_and_definition.rs  helper.rs  mod.rs  priority_and_associativity.rs  range_boundary.rs  statement_and_control.rs
src/reader/: error.rs  mod.rs  reade.rs  reader.rs
src/resolver/: core.rs  mod.rs  resolve.rs  resolver.rs
src/std_lib/: globals.rs  mod.rs  utils.rs
src/tokenizer/: error.rs  literal.rs  mod.rs  scanner.rs  token.rs  token_type.rs
(+47 files in other folders)
