[package]
name = "rox"
version = "0.1.0"
edition = "2024"
authors = ["Ray <https://github.com/inblossoms/rox>"]
description = "A simple programming language interpreter written in Rust"
license = "MIT"
repository = "https://github.com/inblossoms/rox"
readme = "README.md"
keywords = ["interpreter", "rox", "compiler", "language"]
categories = ["compilers", "command-line-utilities"]
default-run = "rox"

[dependencies]
dirs = "6.0.0"
rustyline = "17.x"

[dev-dependencies]
pretty_assertions = { version = "1.4.1", default-features = false, features = [
	"alloc",
] }


[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
